WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
96080
Scrolling performance logging should use WTFLogAlways instead of printf
https://bugs.webkit.org/show_bug.cgi?id=96080
Summary
Scrolling performance logging should use WTFLogAlways instead of printf
Tim Horton
Reported
2012-09-07 00:54:14 PDT
I left the two I didn't introduce in
https://trac.webkit.org/changeset/127837
for another patch.
Attachments
patch
(2.50 KB, patch)
2012-09-07 00:55 PDT
,
Tim Horton
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2012-09-07 00:55:47 PDT
Created
attachment 162697
[details]
patch
Tim Horton
Comment 2
2012-09-07 01:08:26 PDT
https://trac.webkit.org/changeset/127840
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug