Scrolling performance logging should use WTFLogAlways instead of printf https://bugs.webkit.org/show_bug.cgi?id=96080

Reviewed by Dan Bernstein.

Use WTF logging facilities instead of printf() for scrolling performance logging.

* page/scrolling/mac/ScrollingTreeNodeMac.mm:
(WebCore::ScrollingTreeNodeMac::logExposedUnfilledArea):
* platform/graphics/ca/mac/WebTileLayer.mm:
(-[WebTileLayer logFilledFreshTile]):


Canonical link: https://commits.webkit.org/113941@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127840 268f45cc-cd09-0410-ab3c-d52691b4dbfc